--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,67 +1,1 @@
-/**
- * Admin YITH WooCommerce Wishlist CSS
- *
- * @author Your Inspiration Themes
- * @package YITH WooCommerce Wishlist
- * @version 1.1.5
- */
-
-h2.nav-tab-wrapper{
-    margin-bottom: 15px;
-}
-
-#yith_wcwl_panel_colors .color-panel{
-    background: #ffffff;
-    padding: 20px;
-}
- 
-#yith_wcwl_panel_colors .color_box {
-    border: 1px solid #CCC;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    padding: 4px 6px;
-    float: left;
-    width: 250px;
-    margin: 0 10px 0 0;
-}
-
-#yith_wcwl_panel_colors .color_box strong {
-    text-align: left;
-    display: block;
-    padding: 0 0 2px;
-    font-size: .92em;
-}
-
-#yith_wcwl_panel_colors .color_box strong img {
-    float: right;
-    margin: 1px 0 0 0;
-}
-
-#yith_wcwl_panel_colors .color_box input {
-    width: 100%;
-    margin: 0;
-    font-family: monospace;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-#yith_wcwl_panel_colors .color_box .colorpickdiv {
-    z-index: 100;
-    background: #EEE;
-    border: 1px solid #CCC;
-    position: absolute;
-    display: none;
-}
-
-#popular-filter .wp-list-table td.column-actions a{
-    margin-bottom: 5px;
-}
-
-.woocommerce_page_wishlist #TB_window img#TB_Image{
-    border: none;
-}
+#popular-filter .wp-list-table td.column-name img{max-width:40px;height:auto;float:left}#popular-filter .wp-list-table td.column-name .product-details{padding-left:60px}#popular-filter .wp-list-table td.column-actions .button{text-indent:9999px;margin:2px 0 2px 4px;height:2em!important;width:2em;overflow:hidden;vertical-align:middle;position:relative}#popular-filter .wp-list-table td.column-actions .button:after{font-family:WooCommerce;speak:none;font-weight:400;font-variant:normal;text-transform:none;margin:0;text-indent:0;position:absolute;top:0;left:0;width:100%;height:100%;text-align:center;line-height:1.85}#popular-filter .wp-list-table td.column-actions .button.send:after{content:"\e02d"}#popular-filter .wp-list-table td.column-actions .button.user:after{content:"\e038"}#popular-filter .wp-list-table td.column-actions .button.export:after{content:"\e00a"}#popular-filter .wp-list-table td.column-actions .button.view:after{content:"\e010"}#popular-filter .wp-list-table td.column-actions .button.edit:after{content:"\e603"}#wishlist-filter .wp-list-table td.column-username img{float:left}#wishlist-filter .wp-list-table td.column-username .customer-details{padding-left:60px}.yith-plugin-ui #plugin-fw-wc h2+#yith_wcwl_additional_fields_settings-description p,.yith-plugin-ui #plugin-fw-wc h2+#yith_wcwl_shop_page_settings-description p,.yith-plugin-ui #plugin-fw-wc h2+#yith_wcwl_yith_wfbt-description p{background:0 0;width:100%;margin:0;padding:0;font-weight:400}.yith-plugin-ui #plugin-fw-wc h2+#yith_wcwl_additional_fields_settings-description p:before,.yith-plugin-ui #plugin-fw-wc h2+#yith_wcwl_shop_page_settings-description p:before,.yith-plugin-ui #plugin-fw-wc h2+#yith_wcwl_yith_wfbt-description p:before{content:''}.option-icon{margin-right:5px}
