--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -377,7 +377,6 @@ table.wishlist_table tbody td{
 .wishlist_table tr th.wishlist-delete,
 .wishlist_table tr th.product-checkbox {
     text-align: center;
-    background: #fff;
 }
 
 .wishlist_table tr th.product-checkbox {
@@ -1018,6 +1017,24 @@ div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
     margin-bottom: 0;
 }
 
+.wishlist_manage_table td.wishlist-name .wishlist-title .show-title-form{
+    display: inline-block;
+    padding: 0;
+    border: none;
+    background: none;
+    top: 0;
+    margin: 0;
+}
+
+.wishlist_manage_table td.wishlist-name a.show-title-form i{
+    padding: 5px;
+    margin: 0;
+}
+
+.wishlist_manage_table td.wishlist-name:hover a.show-title-form{
+    visibility: visible;
+}
+
 .wishlist_manage_table td.wishlist-name .hidden-title-form{
     margin: 0!important;
 }
@@ -1025,6 +1042,27 @@ div.product .woocommerce-price-and-add .single_add_to_wishlist.button {
 .wishlist_manage_table td.wishlist-name .hidden-title-form input[type="text"]{
     width: 100%;
     min-width: 0;
+}
+
+.wishlist_manage_table td.wishlist-name .hidden-title-form{
+    position: relative;
+}
+
+.wishlist_manage_table td.wishlist-name .hidden-title-form .edit-title-buttons{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.wishlist_manage_table td.wishlist-name .hidden-title-form a{
+    float: right;
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+.wishlist_manage_table td.wishlist-name .hidden-title-form a i{
+    padding: 5px;
+    margin: 0;
 }
 
 table.wishlist_manage_table tfoot td{
@@ -1067,8 +1105,26 @@ table.wishlist_manage_table tfoot td{
     padding: 0;
 }
 
-.wishlist_manage_table.modern_grid li .item-details table.item-details-table td{
-    /*font-size: 1em;*/
+.wishlist_manage_table.modern_grid li .item-details .hidden-title-form{
+    position: relative;
+}
+
+.wishlist_manage_table.modern_grid li .item-details .hidden-title-form .edit-title-buttons{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.wishlist_manage_table.modern_grid li .item-details .hidden-title-form .edit-title-buttons a{
+    float: right;
+    line-height: 1;
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+.wishlist_manage_table.modern_grid li .item-details .hidden-title-form .edit-title-buttons a i{
+    padding: 5px;
+    margin: 0;
 }
 
 .wishlist_manage_table.modern_grid li .product-thumbnail img:first-child{
@@ -1123,7 +1179,33 @@ table.wishlist_manage_table tfoot td{
     width: 100%;
 }
 
-.wishlist_manage_table.mobile li .item-wrapper .item-details .wishlist-title-with-form{
+.wishlist_manage_table.mobile li .item-details .hidden-title-form{
+    position: relative;
+}
+
+.wishlist_manage_table.mobile li .item-details .hidden-title-form input[type="text"]{
+    width: 100%;
+}
+
+.wishlist_manage_table.mobile li .item-details .hidden-title-form .edit-title-buttons{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.wishlist_manage_table.mobile li .item-details .hidden-title-form .edit-title-buttons a{
+    float: right;
+    line-height: 1;
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+.wishlist_manage_table.mobile li .item-details .hidden-title-form .edit-title-buttons a i{
+    padding: 5px;
+    margin: 0;
+}
+
+.wishlist_manage_table.mobile li .item-wrapper .item-details .wishlist-title{
     display: block;
     border-bottom: 1px solid #cdcdcd;
     position: relative;
