--- a/plugin-fw/assets/css/scss/yith-plugin-ui/_components.scss
+++ b/plugin-fw/assets/css/scss/yith-plugin-ui/_components.scss
@@ -6,6 +6,7 @@
 @import "components/buttons";
 @import "components/boxed-row";
 @import "components/confirm";
+@import "components/list-items";
 @import "components/list-table-blank-state";
 @import "components/modal";
 @import "components/tip-tip";
