--- a/plugin-fw/assets/css/scss/yith-plugin-panel.scss
+++ b/plugin-fw/assets/css/scss/yith-plugin-panel.scss
@@ -1,6 +1,7 @@
 @import "yith-plugin-panel/head_comment";
 
 @import "yith-plugin-panel/panel";
+@import "yith-plugin-panel/your-store-tools";
 @import "yith-plugin-panel/wp-pages";
 @import "yith-plugin-panel/taxonomy";
 @import "yith-plugin-panel/premium-tab";
