--- a/plugin-fw/assets/css/scss/yith-plugin-panel/_panel.scss
+++ b/plugin-fw/assets/css/scss/yith-plugin-panel/_panel.scss
@@ -422,6 +422,7 @@ body.yith-plugin-fw-panel.yith-plugin-fw-panel--version-2 {
             }
         }
 
+        .yith-plugin-fw__panel__content__page__container,
         .yith-plugin-fw-panel-custom-tab-container {
             padding: 32px;
         }
