--- a/plugin-fw/assets/css/yith-plugin-panel.css
+++ b/plugin-fw/assets/css/yith-plugin-panel.css
@@ -413,6 +413,7 @@ body.yith-plugin-fw-panel.yith-plugin-fw-panel--version-2 .yith-plugin-fw-rate {
   line-height: 1.5;
 }
 
+.yith-plugin-fw__panel__content .yith-plugin-fw__panel__content__page .yith-plugin-fw__panel__content__page__container,
 .yith-plugin-fw__panel__content .yith-plugin-fw__panel__content__page .yith-plugin-fw-panel-custom-tab-container {
   padding: 32px;
 }
@@ -706,6 +707,190 @@ body.rtl .yith-plugin-fw__panel__content .yith-plugin-fw__panel__content__action
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .yith-plugin-fw__panel__your-store-tools-tab__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
+  margin: 0 auto;
+  width: fit-content;
+  font-size: 1.2em;
+  font-weight: 800;
+  color: #015b7d;
+  padding: 20px 0 12px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .yith-plugin-fw__panel__your-store-tools-tab__header__logo {
+  width: 80px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .yith-plugin-fw__panel__your-store-tools-tab__header__title {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  line-height: 1.4em;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .yith-plugin-fw__panel__your-store-tools-tab__header__title mark {
+  background: transparent;
+  color: #abc227;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .yith-plugin-fw__panel__content__page__description {
+  font-size: 1.4em;
+  text-align: center;
+  font-weight: 600;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .yith-plugin-fw__panel__content__page__description mark {
+  background: transparent;
+  text-decoration: underline;
+  color: inherit;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  grid-gap: 24px;
+  max-width: 1700px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  border: 1px solid #cbd5e1;
+  border-radius: 8px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  background: #fff;
+  position: relative;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .header {
+  display: flex;
+  align-items: center;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+  border-bottom: 1px solid #cbd5e1;
+  gap: 12px;
+  font-weight: 600;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .header .icon {
+  width: 48px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .header .name {
+  flex: 1;
+  font-size: 1.1em;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .recommended {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  padding: 2px 10px;
+  font-size: .75em;
+  font-weight: 800;
+  text-transform: uppercase;
+  background: #c49100;
+  color: #fff;
+  border-radius: 40px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .description {
+  padding-top: 8px;
+  flex: 1;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer {
+  padding-top: 8px;
+  margin-top: 8px;
+  text-align: right;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .active-status {
+  background: #f2fbd9;
+  padding: 12px 20px;
+  border-radius: 50px;
+  color: #333;
+  display: inline-flex;
+  align-items: center;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .active-status:before {
+  content: '';
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #92cf20;
+  display: inline-block;
+  animation: yith-plugin-fw-your-store-tools-pulse-active 2s infinite;
+  margin-right: 12px;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .get-it {
+  padding: 12px 20px;
+  border-radius: 50px;
+  display: inline-block;
+  text-decoration: none;
+  background: var(--yith-primary);
+  color: var(--yith-primary-text);
+  font-weight: 800;
+  transition: background-color .2s ease-in-out, padding .2s ease-in-out;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .get-it .get-it__wrap {
+  position: relative;
+  display: inline-block;
+  transition: all .2s ease-in-out;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .get-it svg {
+  position: absolute;
+  width: 1em;
+  right: 0;
+  opacity: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all .2s ease-in-out;
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .get-it:hover {
+  padding: 12px 32px;
+  background: var(--yith-primary-hover);
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .get-it:hover .get-it__wrap {
+  transform: translateX(-0.5em);
+}
+
+#yith-plugin-fw__panel__your-store-tools-tab .items .item .footer .get-it:hover svg {
+  right: -1.5em;
+  opacity: 1;
+  stroke-width: 3;
+  stroke: currentColor;
+  transition-delay: .07s;
+}
+
+@media screen and (max-width: 600px) {
+  #yith-plugin-fw__panel__your-store-tools-tab .items {
+    grid-template-columns: 1fr;
+  }
+}
+
+@keyframes yith-plugin-fw-your-store-tools-pulse-active {
+  0% {
+    box-shadow: 0 0 0 0px rgba(148, 218, 37, 0.7);
+  }
+  70% {
+    box-shadow: 0 0 0 8px rgba(148, 218, 37, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0px rgba(148, 218, 37, 0);
+  }
 }
 
 /**
